refs #15 - correction in alignment

--- a/pdm-web-components/src/components/tree-view/tree-view.css
+++ b/pdm-web-components/src/components/tree-view/tree-view.css
@@ -21,12 +21,13 @@ body {
 }
 
 .traceability {
-  margin-top: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
-.traceability .traceability__container {
-  margin: 0 auto;
-  width: 1200px;
-}
+/* .traceability .traceability__container {
+} */
 .traceability .traceability__container .traceability__top {
   display: flex;
   flex-direction: column;
@@ -88,7 +89,7 @@ body {
   white-space: initial;
 }
 .traceability .traceability__container .traceability__top .traceability__top-box {
-  margin-top: 1em;
+  margin-top: 1.5em;
   padding: 0.9em 1.3em 0.1em;
   background-color: white;
   border: 1px solid rgba(189, 202, 223, 0.8);
